objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Direct to contract sale</fullName>
        <description>Sales process without lot reservation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Home</fullName>
        </values>
        <values>
            <fullName>Contract Ready</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Pending Offer</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote Closed</fullName>
        </values>
        <values>
            <fullName>Quote%2FSelection</fullName>
        </values>
        <values>
            <fullName>Under Contract</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sale with lot reservation</fullName>
        <description>Sales process with lot reservation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Home</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lot Reservation</fullName>
        </values>
        <values>
            <fullName>Pending Offer</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote Closed</fullName>
        </values>
        <values>
            <fullName>Quote%2FSelection</fullName>
        </values>
        <values>
            <fullName>Under Contract</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Closing_Date__c</fullName>
        <label>Actual Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appt_No_Show_Cancel_Reason__c</fullName>
        <label>Appt No Show/Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_transferring_to_the_area__c</fullName>
        <inlineHelpText>If transferring to the area, enter transfer date.</inlineHelpText>
        <label>Are you transferring to the area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <inlineHelpText>Select all areas of interest</inlineHelpText>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cedar Park / Leander</fullName>
                </value>
                <value>
                    <fullName>Central &amp; East Austin</fullName>
                </value>
                <value>
                    <fullName>Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Georgetown / Liberty Hill</fullName>
                </value>
                <value>
                    <fullName>Lakeway / Bee Cave</fullName>
                </value>
                <value>
                    <fullName>San Marcos</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Ann Arundel</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>Frederick</fullName>
                </value>
                <value>
                    <fullName>Loudoun</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Prince William</fullName>
                </value>
                <value>
                    <fullName>Sussex</fullName>
                </value>
                <value>
                    <fullName>Talbot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Sales_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Sales Assistant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>SalesAgentSalesOfficeLink__c.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Agent__r.Profile__c</field>
                <operation>contains</operation>
                <value>Assistant</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Opportunities (Assigned Sales Assistant)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Model_Price__c</fullName>
        <label>Base Model Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Text__c</fullName>
        <description>To hold the community information from the web to lead form</description>
        <label>Community Interested In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Appointment_Was_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Appointment Was Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Notes__c</fullName>
        <label>Deal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Stipulations__c</fullName>
        <label>Deal Stipulations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_own_or_rent__c</fullName>
        <label>Do you currently own or rent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Open_Time_Dependent_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is true then the record will be kicked out of any outstanding time-dependent workflows because it will be part of the criteria of the workflows. During the custom convert, we will set this to true so that the lead can be converted</description>
        <label>Exit Open Time Dependent Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Swing__c</fullName>
        <label>Home Swing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <label>Household Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $39,000</fullName>
                </value>
                <value>
                    <fullName>$40,000 - $99,000</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,000</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $199,000</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $299,000</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $399,000</fullName>
                </value>
                <value>
                    <fullName>$400,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_house_hunting__c</fullName>
        <label>How long have you been house hunting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_Score__c</fullName>
        <label>HubSpot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Lifecycle_Stage__c</fullName>
        <label>Hubspot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source__c</fullName>
        <label>Hubspot Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Time_Dependent_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In  Time Dependent Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Sales_Repr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Sales Counselor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>SalesAgentSalesOfficeLink__c.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Agent__r.Profile__c</field>
                <operation>contains</operation>
                <value>ISR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Opportunities (Internet Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAutomatedStageUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutomatedStageUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Provides more detail about Lead Source</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Contest Entry</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Realtor</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal Issue</fullName>
                </value>
                <value>
                    <fullName>Changed Mind</fullName>
                </value>
                <value>
                    <fullName>Change in Employment / Relocation</fullName>
                </value>
                <value>
                    <fullName>Change in Marital Status</fullName>
                </value>
                <value>
                    <fullName>Concerns with Disclosure</fullName>
                </value>
                <value>
                    <fullName>Contingency Expiration</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Discontinued Product</fullName>
                </value>
                <value>
                    <fullName>Homesite Conditions</fullName>
                </value>
                <value>
                    <fullName>Loan Denial</fullName>
                </value>
                <value>
                    <fullName>Lot Transfer / Lot Assignment</fullName>
                </value>
                <value>
                    <fullName>Material Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Medical Reasons</fullName>
                </value>
                <value>
                    <fullName>Nonperformance</fullName>
                </value>
                <value>
                    <fullName>Offer Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Purchased with Competitor</fullName>
                </value>
                <value>
                    <fullName>Right of Rescission</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied with Product</fullName>
                </value>
                <value>
                    <fullName>.Cost Objections</fullName>
                </value>
                <value>
                    <fullName>.Just Looking</fullName>
                </value>
                <value>
                    <fullName>.No Response</fullName>
                </value>
                <value>
                    <fullName>.Not Interested</fullName>
                </value>
                <value>
                    <fullName>.Other Builder</fullName>
                </value>
                <value>
                    <fullName>.Out of Market</fullName>
                </value>
                <value>
                    <fullName>.Timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Address__c</fullName>
        <formula>Lot__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Hold_Expiry_Date__c</fullName>
        <label>Lot Hold Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Premium__c</fullName>
        <label>Lot Premium</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Price__c</fullName>
        <label>Lot Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lot</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Lot must belong to the selected subdivision, be available (open) and be released for sale.</errorMessage>
            <filterItems>
                <field>Lot__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <filterItems>
                <field>Lot__c.Released_for_Sale__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Lot__c.Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <filterItems>
                <field>$Source.StageName</field>
                <operation>equals</operation>
                <value>Prospecting, Engagement, Quote/Selection</value>
            </filterItems>
            <filterItems>
                <field>$Source.StageName</field>
                <operation>equals</operation>
                <value>Contract Ready, Lot Reservation, Pending Offer, Under Contract, Closed Home, Cancelled, Quote Closed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaritalStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Model must belong to the selected subdivision and must be active.</errorMessage>
            <filterItems>
                <field>Model__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <filterItems>
                <field>Model__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Home__c</fullName>
        <label>Number of Children in Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Sales_Added_Date__c</fullName>
        <description>Date Online Sales Counselor added to record</description>
        <label>Online Sales Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Cancel_Loss_Date__c</fullName>
        <label>Opp Cancel/Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Base_Model_Price__c</fullName>
        <formula>Base_Model_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Base Model Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Lot_Premium__c</fullName>
        <formula>Lot_Premium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Lot Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Lot_Price__c</fullName>
        <formula>Lot_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Lot Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - Ready, Willing, Able</fullName>
                </value>
                <value>
                    <fullName>B - Two of These</fullName>
                </value>
                <value>
                    <fullName>C - Ready or Willing or Able</fullName>
                </value>
                <value>
                    <fullName>D - Cold</fullName>
                </value>
                <value>
                    <fullName>M - Marketing Only</fullName>
                </value>
                <value>
                    <fullName>W - Web Lead</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Real Estate Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select a valid real estate agent</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Real Estate Agent</value>
            </filterItems>
            <infoMessage>Select a real estate agent representing the customer for this deal.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Closing_Date__c</fullName>
        <label>Revised Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Agent1_Added_Date__c</fullName>
        <description>Date Sales Office Agent1 added to record</description>
        <label>Sales Agent1 Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Sales_Office_Relationship_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office Agent 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Agent__r.Profile__c</field>
                <operation>contains</operation>
                <value>Sales User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Opportunities (Sales Office Agent 2)</relationshipLabel>
        <relationshipName>Opportunities_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Sales_Office_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office Agent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Sales Agent should belong to the selected Sales Office.</errorMessage>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Agent__r.Profile__c</field>
                <operation>contains</operation>
                <value>Sales User</value>
            </filterItems>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Agent__r.Profile__c</field>
                <operation>contains</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_s_Working__c</fullName>
        <label>Sales Agent(s) Working</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aleks Korowski</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Angie Cole</fullName>
                </value>
                <value>
                    <fullName>Angie Miller</fullName>
                </value>
                <value>
                    <fullName>Belinda Shuler</fullName>
                </value>
                <value>
                    <fullName>Brian Blair</fullName>
                </value>
                <value>
                    <fullName>Colin Sexton</fullName>
                </value>
                <value>
                    <fullName>David Matthys</fullName>
                </value>
                <value>
                    <fullName>Dori Conway</fullName>
                </value>
                <value>
                    <fullName>James Haugen</fullName>
                </value>
                <value>
                    <fullName>Janice Wunning</fullName>
                </value>
                <value>
                    <fullName>Kendra Johnson</fullName>
                </value>
                <value>
                    <fullName>Kevin Bendy</fullName>
                </value>
                <value>
                    <fullName>Lara Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Linda Lahrman</fullName>
                </value>
                <value>
                    <fullName>Lou Niemeyer</fullName>
                </value>
                <value>
                    <fullName>Marc Bodley</fullName>
                </value>
                <value>
                    <fullName>Matt Schroeder</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Richard Romeo</fullName>
                </value>
                <value>
                    <fullName>Steve Chase</fullName>
                </value>
                <value>
                    <fullName>Tina Spencer</fullName>
                </value>
                <value>
                    <fullName>Vern Carlson</fullName>
                </value>
                <value>
                    <fullName>Jesse Miller</fullName>
                </value>
                <value>
                    <fullName>Joelle Hogg</fullName>
                </value>
                <value>
                    <fullName>Michael Wagner</fullName>
                </value>
                <value>
                    <fullName>Nichole Knight</fullName>
                </value>
                <value>
                    <fullName>Stephanie McKinney</fullName>
                </value>
                <value>
                    <fullName>Sylvia Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Dustin Compton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>